--- a/third_page.html
+++ b/third_page.html
@@ -15,7 +15,7 @@
                 <li><a href="/index.html#enter">Введение</a></li>
                 <li><a href="/index.html#tools">Инструменты</a></li>
                 <li><a href="/index.html#lang">Языки</a></li>
-                <li><a href="/pages/second_page.html">Перейти на 2ю страницу</a></li>
+                <li><a href="/second_page.html">Перейти на 2ю страницу</a></li>
                 <li><a href="#">Оставить комментарий</a></li>
             </ul>
         </nav>
@@ -64,8 +64,8 @@
             <a href="/index.html#enter">Введение</a>
             <a href="/index.html#tools">Инструменты</a>
             <a href="/index.html#lang">Языки</a>
-            <a href="/pages/second_page.html">Перейти на 2ю страницу</a>
-            <a href="/pages/third_page.html#comment">Оставить комментарий</a>
+            <a href="/second_page.html">Перейти на 2ю страницу</a>
+            <a href="#">Оставить комментарий</a>
         </div>
         <div class="copyright">Copyright (c) Urban-university 2024</div>
     </footer>
