--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <li><a href="#enter">Введение</a></li>
                 <li><a href="#tools">Инструменты</a></li>
                 <li><a href="#lang">Языки</a></li>
-                <li><a href="./pages/second_page.html">Перейти на 2ю страницу</a></li>
-                <li><a href="./pages/third_page.html">Оставить комментарий</a></li>
+                <li><a href="./second_page.html">Перейти на 2ю страницу</a></li>
+                <li><a href="./third_page.html">Оставить комментарий</a></li>
             </ul>
         </nav>
     </header>
@@ -253,8 +253,8 @@
             <a href="#enter">Введение</a>
             <a href="#tools">Инструменты</a>
             <a href="#lang">Языки</a>
-            <a href="./pages/second_page.html">Перейти на 2ю страницу</a>
-            <a href="./pages/third_page.html">Оставить комментарий</a>
+            <a href="./second_page.html">Перейти на 2ю страницу</a>
+            <a href="./third_page.html">Оставить комментарий</a>
         </div>
         <div class="copyright">Copyright (c) Urban-university, 2024</div>
     </footer>
