--- a/second_page.html
+++ b/second_page.html
@@ -15,8 +15,8 @@
                 <li><a href="/index.html#enter">Введение</a></li>
                 <li><a href="/index.html#tools">Инструменты</a></li>
                 <li><a href="/index.html#lang">Языки</a></li>
-                <li><a href="/pages/second_page.html">Перейти на 2ю страницу</a></li>
-                <li><a href="/pages/third_page.html#comment">Оставить комментарий</a></li>
+                <li><a href="#">Перейти на 2ю страницу</a></li>
+                <li><a href="/third_page.html#comment">Оставить комментарий</a></li>
             </ul>
         </nav>
     </header>
@@ -47,8 +47,8 @@
             <a href="/index.html#enter">Введение</a>
             <a href="/index.html#tools">Инструменты</a>
             <a href="/index.html#lang">Языки</a>
-            <a href="/pages/second_page.html">Перейти на 2ю страницу</a>
-            <a href="/pages/third_page.html#comment">Оставить комментарий</a>
+            <a href="#">Перейти на 2ю страницу</a>
+            <a href="/third_page.html#comment">Оставить комментарий</a>
         </div>
         <div class="copyright">Copyright (c) Urban-university 2024</div>
     </footer>
