--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1>Frontend Разработка</h1>
         <nav class="navigation">
             <ul>
-                <li><a href="./index.html">Главная</a></li>
+                <li><a href="#">Главная</a></li>
                 <li><a href="#enter">Введение</a></li>
                 <li><a href="#tools">Инструменты</a></li>
                 <li><a href="#lang">Языки</a></li>
-                <li><a href="./second_page.html">Перейти на 2ю страницу</a></li>
-                <li><a href="./third_page.html">Оставить комментарий</a></li>
+                <li><a href="/second_page.html">Перейти на 2ю страницу</a></li>
+                <li><a href="/third_page.html">Оставить комментарий</a></li>
             </ul>
         </nav>
     </header>
@@ -253,8 +253,8 @@
             <a href="#enter">Введение</a>
             <a href="#tools">Инструменты</a>
             <a href="#lang">Языки</a>
-            <a href="./second_page.html">Перейти на 2ю страницу</a>
-            <a href="./third_page.html">Оставить комментарий</a>
+            <a href="/second_page.html">Перейти на 2ю страницу</a>
+            <a href="/third_page.html">Оставить комментарий</a>
         </div>
         <div class="copyright">Copyright (c) Urban-university, 2024</div>
     </footer>
