--- a/second_page.html
+++ b/second_page.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>История</title>
 </head>
 <body>
     <header>
         <h1>Frontend Разработка</h1>
         <nav class="navigation">
             <ul>
-                <li><a href="../index.html#">Главная</a></li>
+                <li><a href="/index.html#">Главная</a></li>
                 <li><a href="/index.html#enter">Введение</a></li>
                 <li><a href="/index.html#tools">Инструменты</a></li>
                 <li><a href="/index.html#lang">Языки</a></li>
